--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tailwindcss": "npx tailwindcss -i ./src/assets/style.css -o ./src/assets/output.css --watch"
   },
   "dependencies": {
+    "tesseract.js": "^4.1.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
 }
